--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "express": "^4.14.0",
     "nodemon": "^1.11.0"
   },
+  "engines" : { "node" : "^8.0.0" },
   "build": {
     "productName": "Vault-UI",
     "appId": "com.github.djenriquez.vault-ui",
