--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "homepage": "https://github.com/djenriquez/vault-ui#readme",
   "devDependencies": {
     "autoprefixer": "^6.5.3",
-    "babel-core": "^6.18.2",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.18.0",
@@ -54,42 +54,44 @@
     "babel-preset-stage-2": "^6.18.0",
     "copy-to-clipboard": "^3.0.5",
     "cross-env": "^3.1.4",
-    "css-loader": "^0.28.0",
-    "electron": "^1.6.6",
+    "css-loader": "^0.28.4",
+    "electron": "^1.7.4",
     "electron-builder": "^13.3.2",
     "eslint": "^3.14.0",
     "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "extract-zip": "1.6.0",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.11.2",
     "flexboxgrid": "^6.3.1",
     "hcl-to-json": "0.0.4",
-    "immutability-helper": "^2.1.2",
+    "immutability-helper": "^2.2.3",
     "jsondiffpatch": "^0.2.4",
     "jsondiffpatch-for-react": "^1.0.1",
-    "jsoneditor": "^5.5.11",
+    "jsoneditor": "^5.8.1",
     "lodash": "^4.16.6",
     "material-ui": "^0.16.7",
     "mui-icons": "^1.2.1",
     "postcss-loader": "^1.3.3",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.0",
     "react-ultimate-pagination-material-ui": "^0.5.0",
     "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.3"
+    "url-loader": "^0.5.9",
+    "webpack": "^2.6.1"
   },
   "dependencies": {
     "@financial-times/s3o-middleware": "^2.0.4",
-    "axios": "^0.16.1",
-    "body-parser": "^1.15.2",
+    "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
     "compression": "^1.6.2",
-    "express": "^4.14.0",
+    "express": "^4.15.3",
     "nodemon": "^1.11.0"
   },
-  "engines" : { "node" : "^8.0.0" },
+  "engines": {
+    "node": "^8.0.0"
+  },
   "build": {
     "productName": "Vault-UI",
     "appId": "com.github.djenriquez.vault-ui",
