--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.28.0",
     "electron": "^1.6.14",
-    "electron-builder": "^19.33.0",
+    "electron-builder": "*",
     "eslint": "^3.14.0",
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -80,7 +80,7 @@
     "react-tap-event-plugin": "^2.0.0",
     "react-ultimate-pagination-material-ui": "^1.0.3",
     "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^0.6.2",
     "webpack": "^3.6.0"
   },
   "dependencies": {
