--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.28.0",
     "electron": "^1.6.14",
-    "electron-builder": "*",
+    "electron-builder": "^19.55.2",
     "eslint": "^3.14.0",
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^3.0.0",
